Update picture to local file, change meta

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<title>Will Chen</title>
+<meta name="WillChenHomePage" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -15,6 +17,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
+    <img src="Pics/CroppedWillPic.png" style="width:45%;" class="w3-round"><br><br>
     <h4 class="w3-padding-0"><b>Will Chen</b></h4>
   </div>
   <a href="#" class="w3-padding w3-text-teal">Home</a>
