--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="WillChenHomePage" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="CSS/w3.css">
 <link rel="stylesheet" href="CSS/Raleway.css">
-<link rel="stylesheet" href="CSS/font-awesome.css">
+<link rel="stylesheet" href="CSS/font-awesome-4.6.3/css/font-awesome.min.css">
 <style>
 html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 .w3-sidenav a,.w3-sidenav h4 {font-weight:bold}
