Added twitter timeline

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <span class="w3-margin-right">Filter:</span>
       <button class="w3-btn">ALL</button>
       <button class="w3-btn w3-white"><i class="fa fa-bar-chart w3-margin-right"></i>Research</button>
-      <button class="w3-btn w3-white w3-hide-small"><i class="fa fa-comments w3-margin-right"></i>Science Communication</button>
-      <button class="w3-btn w3-white w3-hide-small"><i class="fa fa-gamepad w3-margin-right"></i>For Fun</button>
+      <button class="w3-btn w3-white"><i class="fa fa-comments w3-margin-right"></i>Science Communication</button>
+      <button class="w3-btn w3-white"><i class="fa fa-gamepad w3-margin-right"></i>For Fun</button>
     </div>
   </header>
   
@@ -107,6 +107,15 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
   </div>
 
+  <footer class="w3-container w3-padding-32 w3-white">
+    <div class="w3-row-padding">
+      <div class="w3-third">
+          <a class="twitter-timeline"  href="https://twitter.com/ChenWillMath" data-widget-id="722485127234740224">Tweets by @ChenWillMath</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+      </div>
+    </div>
+  </footer>
+          
 
 
   <!-- Pagination -->
