Moved javascript sourcing
Moved Isotope javascript sorcing to bottom of body

--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
+
+<head>
 <title>Will Chen</title>
 <meta name="WillChenHomePage" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="CSS/w3.css">
 <link rel="stylesheet" href="CSS/Raleway.css">
 <link rel="stylesheet" href="CSS/font-awesome-4.6.3/css/font-awesome.min.css">
+
 <style>
 html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 .w3-sidenav a,.w3-sidenav h4 {font-weight:bold}
 </style>
+
+</head>
+
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
 <!-- Sidenav/menu -->
@@ -187,6 +193,10 @@ function w3_close() {
     document.getElementById("myOverlay").style.display = "none";
 }
 </script>
+
+<!-- Isotope scripts (e.g. filtering) -->
+<script src="JS/isotope.pkgd.min.js"></script>
+
 
 </body>
 </html>
