--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <a href="#"><img src="img_avatar_g2.jpg" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
     <span class="w3-opennav w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <h1><b>Projects</b></h1>
-    <div class="w3-section w3-bottombar w3-padding-16">
+    <div class="w3-section w3-bottombar w3-padding-16 button-group filters-button-group">
       <span class="w3-margin-right">Filter:</span>
       <button class="w3-btn is-checked" data-filter="*">ALL</button>
       <button class="w3-btn" data-filter="research"><i class="fa fa-bar-chart w3-margin-right"></i>Research</button>
