--- a/index.html
+++ b/index.html
@@ -64,38 +64,25 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
   </header>
   
-  <!-- First Photo Grid-->
+  <!-- Project Grid-->
   <div class="w3-row-padding grid">
     <div class="w3-third w3-container w3-margin-bottom element-item research" data-category="research">
-      <img src="img_mountains.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="img_mountains.jpg" alt="Research" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Lorem Ipsum</b></p>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
       </div>
     </div>
-    <div class="w3-third w3-container w3-margin-bottom element-item research" data-category="research">
-      <img src="img_lights.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
-      <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-      </div>
-    </div>
+
     <div class="w3-third w3-container w3-margin-bottom element-item scicomm" data-category="scicomm">
-      <img src="img_lights.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="img_lights.jpg" alt="Scicomm" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Lorem Ipsum</b></p>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom element-item fun" data-category="fun">
-      <img src="img_lights.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
-      <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-      </div>
-    </div>
-    <div class="w3-third w3-container element-item scicomm" data-category="scicomm">
-      <img src="img_nature.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="img_lights.jpg" alt="Fun" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Lorem Ipsum</b></p>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
