--- a/index.html
+++ b/index.html
@@ -52,8 +52,6 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
   <!-- Header -->
   <header class="w3-container">
-    <a href="#"><img src="img_avatar_g2.jpg" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
-    <span class="w3-opennav w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <h1><b>Projects</b></h1>
     <div class="w3-section w3-bottombar w3-padding-16 button-group filters-button-group">
       <span class="w3-margin-right">Filter:</span>
@@ -67,7 +65,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <!-- Project Grid-->
   <div class="w3-row-padding grid">
     <div class="w3-third w3-container w3-margin-bottom element-item research " data-category="research">
-      <img src="img_mountains.jpg" alt="Research" style="width:100%" class="w3-hover-opacity">
+      <a href="google.com"><img src="img_mountains.jpg" alt="Research" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Lorem Ipsum</b></p>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
