--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <!-- Project Grid-->
   <div class="w3-row-padding grid">
     <div class="w3-third w3-container w3-margin-bottom element-item research " data-category="research">
-      <a href="google.com"><img src="img_mountains.jpg" alt="Research" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://google.com"><img src="img_mountains.jpg" alt="Research" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Lorem Ipsum</b></p>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
