--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="w3-section w3-bottombar w3-padding-16 button-group filters-button-group">
       <span class="w3-margin-right">Filter:</span>
       <button class="w3-btn w3-white is-checked" data-filter="*">ALL</button>
-      <button class="w3-btn w3-white" data-filter="research"><i class="fa fa-bar-chart w3-margin-right"></i>Research</button>
-      <button class="w3-btn w3-white" data-filter="scicomm"><i class="fa fa-comments w3-margin-right"></i>Science Communication</button>
-      <button class="w3-btn w3-white" data-filter="fun"><i class="fa fa-gamepad w3-margin-right"></i>For Fun</button>
+      <button class="w3-btn w3-white" data-filter=".research"><i class="fa fa-bar-chart w3-margin-right"></i>Research</button>
+      <button class="w3-btn w3-white" data-filter=".scicomm"><i class="fa fa-comments w3-margin-right"></i>Science Communication</button>
+      <button class="w3-btn w3-white" data-filter=".fun"><i class="fa fa-gamepad w3-margin-right"></i>For Fun</button>
     </div>
   </header>
   
