--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <img src="Pics/CroppedWillPic.png" style="width:45%;" class="w3-round"><br><br>
+    <img src="Pics/Optimized-CroppedWillPic.png" style="width:45%;" class="w3-round"><br><br>
     <h4 class="w3-padding-0"><b>Will Chen</b></h4>
   </div>
   <a href="#" class="w3-padding w3-text-teal">Home</a>
