--- a/index.html
+++ b/index.html
@@ -175,6 +175,16 @@ function w3_close() {
 <script src="JS/isotope.pkgd.js"></script>
 <script src="JS/ProjectFilter.js"></script>
 
+<!-- Test javascript -->
+<p>Click the button to display an alert box:</p>
+
+<button onclick="myFunction()">Try it</button>
+
+<script>
+function myFunction() {
+    alert("I am an alert box!");
+}
+</script>
 </body>
 </html>
 
