--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <a href="#" class="w3-padding">Contact</a>
    
   <div class="w3-section w3-padding-top w3-large">
-    <a href="mailto:wchen1642@gmail.com" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block"><i class="fa fa-envelope"></i></a>
-    <a href="https://twitter.com/ChenWillMath" class="w3-hover-white w3-hover-text-light-blue w3-show-inline-block"><i class="fa fa-twitter"></i></a>
-    <a href="https://www.linkedin.com/in/chenwillmath" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block"><i class="fa fa-linkedin"></i></a>
-    <a href="https://github.com/DubChen" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block"><i class="fa fa-github"></i></a>
+    <a href="mailto:wchen1642@gmail.com" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block extLink"><i class="fa fa-envelope"></i></a>
+    <a href="https://twitter.com/ChenWillMath" class="w3-hover-white w3-hover-text-light-blue w3-show-inline-block extLink"><i class="fa fa-twitter"></i></a>
+    <a href="https://www.linkedin.com/in/chenwillmath" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block extLink"><i class="fa fa-linkedin"></i></a>
+    <a href="https://github.com/DubChen" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block extLink"><i class="fa fa-github"></i></a>
 
 
   </div>
@@ -175,16 +175,6 @@ function w3_close() {
 <script src="JS/isotope.pkgd.js"></script>
 <script src="JS/ProjectFilter.js"></script>
 
-<!-- Test javascript -->
-<p>Click the button to display an alert box:</p>
-
-<button onclick="myFunction()">Try it</button>
-
-<script>
-function myFunction() {
-    alert("I am an alert box!");
-}
-</script>
 </body>
 </html>
 
