--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-<head>
 <title>Will Chen</title>
 <meta name="WillChenHomePage" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="CSS/w3.css">
@@ -14,7 +13,6 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 .w3-sidenav a,.w3-sidenav h4 {font-weight:bold}
 </style>
 
-</head>
 
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
@@ -172,6 +170,7 @@ function w3_close() {
 </script>
 
 <!-- Isotope scripts for filtering -->
+<script src="jquery-3.1.1.min.js"></script>
 <script src="JS/isotope.pkgd.js"></script>
 <script src="JS/ProjectFilter.js"></script>
 
