Test - Revert after

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <title>Will Chen</title>
 <meta name="WillChenHomePage" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="CSS/w3.css">
+<!--<link rel="stylesheet" href="CSS/w3.css">-->
 <link rel="stylesheet" href="CSS/Raleway.css">
 <link rel="stylesheet" href="CSS/font-awesome-4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" href="CSS/ProjectFilter.css">
