Changed placement of button-group class

--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <a href="#"><img src="img_avatar_g2.jpg" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
     <span class="w3-opennav w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <h1><b>Projects</b></h1>
-    <div class="w3-section w3-bottombar w3-padding-16 button-group filters-button-group">
+    <div class="w3-section w3-bottombar w3-padding-16">
       <span class="w3-margin-right">Filter:</span>
-      <button class="w3-btn button w3-white is-checked" data-filter="*">ALL</button>
-      <button class="w3-btn button w3-white" data-filter=".research"><i class="fa fa-bar-chart w3-margin-right"></i>Research</button>
-      <button class="w3-btn button w3-white" data-filter=".scicomm"><i class="fa fa-comments w3-margin-right"></i>Science Communication</button>
-      <button class="w3-btn button w3-white" data-filter=".fun"><i class="fa fa-gamepad w3-margin-right"></i>For Fun</button>
+      <div class="button-group filters-button-group">
+        <button class="w3-btn button w3-white is-checked" data-filter="*">ALL</button>
+        <button class="w3-btn button w3-white" data-filter=".research"><i class="fa fa-bar-chart w3-margin-right"></i>Research</button>
+        <button class="w3-btn button w3-white" data-filter=".scicomm"><i class="fa fa-comments w3-margin-right"></i>Science Communication</button>
+        <button class="w3-btn button w3-white" data-filter=".fun"><i class="fa fa-gamepad w3-margin-right"></i>For Fun</button>
+      </div>
     </div>
   </header>
   
