--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="w3-section w3-bottombar w3-padding-16">
       <span class="w3-margin-right">Filter:</span>
       <div class="button-group filters-button-group">
-        <button class="w3-btn button w3-white is-checked" data-filter="*">ALL</button>
-        <button class="w3-btn button w3-white" data-filter=".research"><i class="fa fa-bar-chart w3-margin-right"></i>Research</button>
-        <button class="w3-btn button w3-white" data-filter=".scicomm"><i class="fa fa-comments w3-margin-right"></i>Science Communication</button>
-        <button class="w3-btn button w3-white" data-filter=".fun"><i class="fa fa-gamepad w3-margin-right"></i>For Fun</button>
+        <button class="w3-btn button is-checked" data-filter="*">ALL</button>
+        <button class="w3-btn button" data-filter=".research"><i class="fa fa-bar-chart w3-margin-right"></i>Research</button>
+        <button class="w3-btn button" data-filter=".scicomm"><i class="fa fa-comments w3-margin-right"></i>Science Communication</button>
+        <button class="w3-btn button" data-filter=".fun"><i class="fa fa-gamepad w3-margin-right"></i>For Fun</button>
       </div>
     </div>
   </header>
