--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@ function w3_close() {
 </script>
 
 <!-- Isotope scripts for filtering -->
-<script src="jquery-3.1.1.min.js"></script>
-<script src="JS/isotope.pkgd.js"></script>
+<script   src="https://code.jquery.com/jquery-3.1.1.js"   integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="   crossorigin="anonymous"></script>
+<script src="https://unpkg.com/isotope-layout@3.0/dist/isotope.pkgd.js"></script>
 <script src="JS/ProjectFilter.js"></script>
 
 </body>
