--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <span class="w3-opennav w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <h1><b>Projects</b></h1>
     <div class="w3-section w3-bottombar w3-padding-16">
-      <span class="w3-margin-right">Filter:</span>
+      <span class="w3-margin-right" float="left">Filter:</span>
       <div class="button-group filters-button-group">
         <button class="w3-btn button is-checked" data-filter="*">ALL</button>
         <button class="w3-btn button" data-filter=".research"><i class="fa fa-bar-chart w3-margin-right"></i>Research</button>
