--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <h1><b>Projects</b></h1>
     <div class="w3-section w3-bottombar w3-padding-16">
       <span class="w3-margin-right" float="left">Filter:</span>
-      <div class="button-group filters-button-group">
+      <div class="button-group filters-button-group" float="left">
         <button class="w3-btn button is-checked" data-filter="*">ALL</button>
         <button class="w3-btn button" data-filter=".research"><i class="fa fa-bar-chart w3-margin-right"></i>Research</button>
         <button class="w3-btn button" data-filter=".scicomm"><i class="fa fa-comments w3-margin-right"></i>Science Communication</button>
