--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <a href="#" class="w3-padding">Contact</a>
    
   <div class="w3-section w3-padding-top w3-large">
-    <a href="mailto:wchen1642@gmail.com" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block extLink"><i class="fa fa-envelope"></i></a>
-    <a href="https://twitter.com/ChenWillMath" class="w3-hover-white w3-hover-text-light-blue w3-show-inline-block extLink"><i class="fa fa-twitter"></i></a>
-    <a href="https://www.linkedin.com/in/chenwillmath" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block extLink"><i class="fa fa-linkedin"></i></a>
-    <a href="https://github.com/DubChen" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block extLink"><i class="fa fa-github"></i></a>
+    <a href="mailto:wchen1642@gmail.com" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block" target="_top"><i class="fa fa-envelope"></i></a>
+    <a href="https://twitter.com/ChenWillMath" class="w3-hover-white w3-hover-text-light-blue w3-show-inline-block" target="_blank"><i class="fa fa-twitter"></i></a>
+    <a href="https://www.linkedin.com/in/chenwillmath" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block" target="_blank"><i class="fa fa-linkedin"></i></a>
+    <a href="https://github.com/DubChen" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block" target="_blank"><i class="fa fa-github"></i></a>
 
 
   </div>
